--- a/src/blocks/card/__date/card__date.css
+++ b/src/blocks/card/__date/card__date.css
@@ -15,3 +15,9 @@ max-width: 352px;
         max-width: 192px;
     }
 }
+@media (max-width: 700px) and (min-width: 320px){
+    .card__date{
+        max-width: 256px;
+        margin-top: 16px;
+    }
+}
