--- a/src/blocks/card/__heading/card__heading.css
+++ b/src/blocks/card/__heading/card__heading.css
@@ -15,3 +15,11 @@ max-width: 352px;
         line-height: 24px;
     }
 }
+@media (max-width: 700px) and (min-width: 320px){
+  .card__heading{
+    font-size: 22px;
+    line-height: 26px;
+    max-width: 256px;
+    margin-top: 16px;
+  }
+}
