--- a/src/blocks/card/__image/card__image.css
+++ b/src/blocks/card/__image/card__image.css
@@ -10,3 +10,9 @@
         min-height: 150px;
     }
 }
+@media (max-width: 700px) and (min-width: 320px){
+    .card__image{
+        max-width: 288px;
+        min-height: 196px;
+    }
+}
