--- a/src/blocks/card/__text/card__text.css
+++ b/src/blocks/card/__text/card__text.css
@@ -14,3 +14,9 @@ max-width: 352px;
         margin: 12px auto 0;
     }
 }
+@media (max-width: 700px) and (min-width: 320px){
+    .card__text{
+        max-width: 256px;
+        margin: 10px auto 0;
+    }
+}
