--- a/src/blocks/card/card.css
+++ b/src/blocks/card/card.css
@@ -18,3 +18,8 @@
         max-width: 224px;
     }
 }
+@media (max-width: 700px) and (min-width: 320px){
+    .card{
+        max-width: 288px;
+    }
+}
