--- a/src/blocks/client/client.css
+++ b/src/blocks/client/client.css
@@ -7,3 +7,8 @@
         margin: 0 40px 0;
     }
 }
+@media (max-width: 700px) and (min-width: 320px){
+    .client{
+        margin: 0 16px 0;
+    }
+}
