--- a/src/blocks/news/__box/news__box.css
+++ b/src/blocks/news/__box/news__box.css
@@ -9,3 +9,9 @@
         margin: 40px 40px 0;
     }
 }
+@media (max-width: 700px) and (min-width: 320px){
+    .news__box{
+        flex-direction: column;
+        margin: 32px 16px 36px;
+    }
+}
