--- a/src/blocks/news/__button/news__button.css
+++ b/src/blocks/news/__button/news__button.css
@@ -1,15 +1,13 @@
+@import url(./_none/news__button_none.css);
+@import url(./_white/news__button_white.css);
 .news__button{
-    background: #FFFFFF;
 border-radius: 80px;
 max-width: 288px;
-margin: 64px auto 80px;
 font-family: "Roboto-Regular";
 font-style: normal;
 font-weight: 500;
 font-size: 18px;
 line-height: 24px;
-
-display: flex;
 align-items: center;
 text-align: center;
 color: #1A1B22;
