--- a/src/blocks/news/__container/news__container.css
+++ b/src/blocks/news/__container/news__container.css
@@ -4,3 +4,9 @@
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 16px;
 }
+@media (max-width: 700px) and (min-width: 320px){
+    .news__container{
+        grid-template-columns: repeat(1, 1fr);
+        margin-top: 36px;
+    }
+}
