--- a/src/blocks/news/__header/news__header.css
+++ b/src/blocks/news/__header/news__header.css
@@ -14,3 +14,10 @@ margin-bottom: 0;
         line-height: 34px;
     }
 }
+@media (max-width: 700px) and (min-width: 320px){
+    .news__header{
+        font-size: 30px;
+        line-height: 34px;
+        margin-bottom: 16px;
+    }
+}
