--- a/src/blocks/slider/__author/slider__author.css
+++ b/src/blocks/slider/__author/slider__author.css
@@ -8,3 +8,9 @@
     margin-top: 0;
     margin-bottom: 0;
 }
+@media (max-width: 1040px) and (min-width: 320px){
+    .slider__author{
+        font-size: 20px;
+        line-height: 30px;
+    }
+}
