--- a/src/blocks/slider/__img/slider__img.css
+++ b/src/blocks/slider/__img/slider__img.css
@@ -2,3 +2,9 @@
     width: 64px;
     height: 64px;
 }
+@media (max-width: 700px) and (min-width: 320px){
+    .slider__img{
+        width: 48px;
+        height: 48px;
+    }
+}
