--- a/src/blocks/slider/__text/slider__text.css
+++ b/src/blocks/slider/__text/slider__text.css
@@ -8,3 +8,8 @@ color: #1A1B22;
 margin: 16px 24px 80px;
 max-width: 352px;
 }
+@media (max-width: 700px) and (min-width: 320px){
+    .slider__text{
+        margin: 16px 16px 62px;
+    }
+}
