--- a/src/blocks/slider/slider.css
+++ b/src/blocks/slider/slider.css
@@ -54,3 +54,9 @@
   .swiper-slide:nth-child(3n){
       width: 40%;
   } */
+  @media (max-width: 1040px) and (min-width: 320px){
+    .swiper-button-prev,
+    .swiper-button-next{
+        display: none;
+    }
+  }
