--- a/src/blocks/tech/__box/tech__box.css
+++ b/src/blocks/tech/__box/tech__box.css
@@ -10,3 +10,10 @@
         margin-top: 40px;
     }
 }
+@media (max-width: 767px) and (min-width: 320px){
+    .tech__box{
+        flex-wrap: wrap;
+        margin: 40px auto 0;
+        max-width: 500px;
+    }
+}
