--- a/src/blocks/tech/__text/tech__text.css
+++ b/src/blocks/tech/__text/tech__text.css
@@ -9,3 +9,8 @@
         max-width: 336px;
     }
 }
+@media (max-width: 767px) and (min-width: 320px){
+    .tech__text{
+        margin: 16px 16px 0;
+    }
+}
