--- a/src/blocks/title/__client/title__client.css
+++ b/src/blocks/title/__client/title__client.css
@@ -14,3 +14,11 @@ margin-bottom: 24px;
         line-height: 34px;
     }
 }
+@media (max-width: 700px) and (min-width: 320px){
+    .title__client{
+        margin-top: 16px;
+        margin-bottom: 16px;
+        font-size: 30px;
+        line-height: 40px;
+    }
+}
