--- a/src/blocks/analyze/__block/analyze__block.css
+++ b/src/blocks/analyze/__block/analyze__block.css
@@ -7,4 +7,72 @@
 }
 .analyze__block:first-of-type{
     margin-top: 0;
+    width: 184px;
+}
+.analyze__block:nth-of-type(2){
+    width: 256px;
+}
+.analyze__block:nth-of-type(3){
+    width: 120px;
+}
+.analyze__block:nth-of-type(4){
+    width: 424px;
+}
+.analyze__block:nth-of-type(5){
+    width: 528px;
+}
+.analyze__block:nth-of-type(6){
+    width: 816px;
+}
+.analyze__block:nth-of-type(7){
+    width: 368px;
+}
+@media (max-width: 900px) and (min-width: 768px){
+    .analyze__block:first-of-type{
+        width: 85px;
+    }
+    .analyze__block:nth-of-type(2){
+        width: 102px;
+    }
+    .analyze__block:nth-of-type(3){
+        width: 62px;
+    }
+    .analyze__block:nth-of-type(4){
+            width: 221px;
+    }
+    .analyze__block:nth-of-type(5){
+        width: 255px;
+    }
+    .analyze__block:nth-of-type(6){
+        width: 414px;
+    }
+    .analyze__block:nth-of-type(7){
+        width: 193px;
+    }
+}
+@media (max-width: 767px) and (min-width: 320px){
+    .analyze__block{
+        margin-top: 42px;
+    }
+    .analyze__block:first-of-type{
+        width: 31px;
+    }
+    .analyze__block:nth-of-type(2){
+        width: 37px;
+    }
+    .analyze__block:nth-of-type(3){
+        width: 23px;
+    }
+    .analyze__block:nth-of-type(4){
+            width: 81px;
+    }
+    .analyze__block:nth-of-type(5){
+        width: 93px;
+    }
+    .analyze__block:nth-of-type(6){
+        width: 151px;
+    }
+    .analyze__block:nth-of-type(7){
+        width: 70px;
+    }
 }
