--- a/src/blocks/news/__text/news__text.css
+++ b/src/blocks/news/__text/news__text.css
@@ -5,7 +5,7 @@
     margin-bottom: 8px;
 }
 @media (max-width: 499px) and (min-width: 320px){
-    .news__text{
+    .news__text_none{
         display: none;
     }
 }
