--- a/src/blocks/text/__vertical/text__vertical.css
+++ b/src/blocks/text/__vertical/text__vertical.css
@@ -17,3 +17,8 @@
         margin-bottom: 0;
     }
 }
+@media (max-width: 700px) and (min-width: 320px){
+    .text__vertical_none{
+        display: none;
+    }
+}
