--- a/src/blocks/title/__analyze/title__analyze.css
+++ b/src/blocks/title/__analyze/title__analyze.css
@@ -4,3 +4,9 @@ font-size: 26px;
 line-height: 30px;
 color: #1A1B22;
 }
+
+@media (max-width: 767px) and (min-width: 320px){
+    .title__analyze{
+        font-size: 22px;
+    }
+}
