--- a/src/blocks/title/__ask/title__ask.css
+++ b/src/blocks/title/__ask/title__ask.css
@@ -14,3 +14,11 @@ margin-bottom: 24px;
 
     }
 }
+@media (max-width: 700px) and (min-width: 320px){
+    .title__ask{
+        font-size: 30px;
+        line-height: 34px;
+        margin-top: 16px;
+        max-width: 288px;
+    }
+}
