--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -23,3 +23,8 @@
         max-height: 200px;
     }
 }
+@media (max-width: 767px) and (min-width: 701px){
+    .footer{
+        margin: 80px auto 0;
+    }
+}
