--- a/src/blocks/inputField/inputField.css
+++ b/src/blocks/inputField/inputField.css
@@ -14,8 +14,9 @@
         background-position: center;
     }
 }
-@media (max-width: 700px) and (min-width: 320px){
+@media (max-width: 767px) and (min-width: 320px){
     .inputField{
         padding-bottom: 32px;
+        background-position: center;
     }
 }
