--- a/src/blocks/error/error.css
+++ b/src/blocks/error/error.css
@@ -1,7 +1,7 @@
 @import url(./__img/error__img.css);
 .error{
     background: #F5F6F7;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
