--- a/src/blocks/preloader/preloader.css
+++ b/src/blocks/preloader/preloader.css
@@ -1,7 +1,7 @@
 @import url(./__circle/preloader__circle.css);
 .preloader{
     background: #F5F6F7;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
