--- a/src/blocks/analyze/__block/analyze__block.css
+++ b/src/blocks/analyze/__block/analyze__block.css
@@ -4,6 +4,7 @@
     margin-top: 74px;
     align-items: center;
     display: flex;
+    margin-left: 60px;
 }
 .analyze__block:first-of-type{
     margin-top: 0;
