--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -6,8 +6,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between; 
-    max-width: 1440px;
-    margin: 80px 104px 0;
+    max-width: 1230px;
+    margin: 80px auto 0;
 
 }
 @media (max-width: 900px) and (min-width: 768px){
