--- a/src/blocks/tech/tech.css
+++ b/src/blocks/tech/tech.css
@@ -4,8 +4,7 @@
 @import url(./__box/tech__box.css);
 .tech{
     background: #F5F6F7;
-    margin-top: 94px;
-    max-width: 1440px;
+    margin: 94px auto 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
